[gd_scene load_steps=7 format=3 uid="uid://cq8au0rw8x357"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ResourceContainer/parts/DClassDetails/d_class_details.gd" id="1_v1mpu"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="2_5l4pl"]
[ext_resource type="PackedScene" uid="uid://colip2v06wa01" path="res://UI/Buttons/DetailBtn/DetailBtn.tscn" id="3_bkkb4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hkdk1"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_lhdsg"]
color = Color(0.054902, 0.054902, 0.054902, 0.796078)
grow_begin = -200.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_a7eam"]
color = Color(0.054902, 0.054902, 0.054902, 0.796078)
grow_begin = -12.0
vertical = true

[node name="DClassDetails" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_hkdk1")
script = ExtResource("1_v1mpu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Totals"
label_settings = ExtResource("2_5l4pl")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Holding cells available:"
label_settings = ExtResource("2_5l4pl")

[node name="TotalCapacity" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "99"
label_settings = ExtResource("2_5l4pl")
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_lhdsg")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "D-Class held:"
label_settings = ExtResource("2_5l4pl")

[node name="TotalAvailable" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "99"
label_settings = ExtResource("2_5l4pl")
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "D-Class utilized:
"
label_settings = ExtResource("2_5l4pl")

[node name="TotalUtilized" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "99"
label_settings = ExtResource("2_5l4pl")
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_lhdsg")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Available:"
label_settings = ExtResource("2_5l4pl")

[node name="TotalFree" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "999"
label_settings = ExtResource("2_5l4pl")
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Capacity" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Capacity"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Capacity/HBoxContainer"]
layout_mode = 2
text = "Housing"
label_settings = ExtResource("2_5l4pl")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/Capacity/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CapacityList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Capacity"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DetailBtn2" parent="VBoxContainer/HBoxContainer/Capacity/CapacityList" instance=ExtResource("3_bkkb4")]
layout_mode = 2
title = "Item A"
amount = 99
icon = 30

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_a7eam")

[node name="Utilized" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Utilized"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Utilized/HBoxContainer"]
layout_mode = 2
text = "Utilization"
label_settings = ExtResource("2_5l4pl")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/Utilized/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UtilizedList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Utilized"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DetailBtn" parent="VBoxContainer/HBoxContainer/Utilized/UtilizedList" instance=ExtResource("3_bkkb4")]
layout_mode = 2
title = "Item A"
amount = 99
icon = 30
